--- a/index.html
+++ b/index.html
@@ -11,55 +11,62 @@
 <h2>Options Profit Visualizer (Black-Scholes-Model)</h2>
 <div class="container">
   <div>
-    <!-- Buy -->
-    <div class="controls">
-      <h3>Buy Parameters</h3>
+    <h3>Stock Parameters</h3>
+
+    <!-- Stock Buy -->
+    <div class="controls" style="margin-top:20px;">
+      <h3>Stock Buy Parameters</h3>
       <div class="control">
-        <label>Spot price S₀ <span id="s0-val" class="small">1.00</span></label>
-        <input id="s0" type="number" step="0.01" min="0.01" value="1.00">
+        <label>Spot price <span id="spot-val" class="small">1.00</span></label>
+        <input id="spot" type="number" step="0.01" min="0.01" value="1.00">
       </div>
       <div class="control">
         <label>Implied Vol (IV %) <span id="iv-val" class="small">40%</span></label>
         <input id="iv" type="range" min="1" max="200" step="1" value="40">
       </div>
       <div class="control">
-        <label>Days to expiry <span id="days-val" class="small">30</span></label>
-        <input id="days" type="range" min="1" max="365" step="1" value="100">
-      </div>
-      <div class="control">
         <label>Risk-free rate r (%) <span id="r-val" class="small">2.00%</span></label>
-        <input id="r" type="range" min="0" max="10" step="0.01" value="2.00">
-      </div>
-      <div class="control">
-        <label>Option type</label>
-        <select id="otype">
-          <option value="call">Call</option>
-          <option value="put">Put</option>
-        </select>
+        <input id="r" type="range" min="-10" max="10" step="0.2" value="2.00">
       </div>
     </div>
 
-    <!-- Sell -->
+    <!-- Stock Sell -->
     <div class="controls" style="margin-top:20px;">
-      <h3>Sell Parameters</h3>
+      <h3>Stock Sell Parameters</h3>
       <div class="control">
-        <label>Spot price S₀ <span id="s0-val2" class="small">1.00</span></label>
-        <input id="s02" type="number" step="0.01" min="0.01" value="1.20">
+        <label>Days passed <span id="days-val2" class="small">30</span></label>
+        <input id="days2" type="range" min="0" max="365" step="1" value="30">
       </div>
       <div class="control">
         <label>Implied Vol (IV %) <span id="iv-val2" class="small">40%</span></label>
         <input id="iv2" type="range" min="1" max="200" step="1" value="40">
       </div>
       <div class="control">
-        <label>Days to expiry <span id="days-val2" class="small">30</span></label>
-        <input id="days2" type="range" min="1" max="365" step="1" value="30">
-      </div>
-      <div class="control">
         <label>Risk-free rate r (%) <span id="r-val2" class="small">2.00%</span></label>
-        <input id="r2" type="range" min="0" max="10" step="0.01" value="2.00">
+        <input id="r2" type="range" min="-10" max="10" step="0.2" value="2.00">
       </div>
     </div>
   </div>
+
+
+
+  
+  <div>
+    <h3>Options</h3>
+    <div id="options-container">
+      <!-- Options will be added here dynamically -->
+    </div>
+    <button id="addOptionBtn" style="margin-top:20px;">+ Add Option</button>
+  </div>
+
+
+
+
+
+
+
+
+
 
   <div class="charts">
     <div class="chartWrap">
